Implementada API bots juego
